<resources>
    <string name="app_name">Maths King</string>
    <string name="algeb">    1.        Algebra</string>
    <string name="differential">       2.                Differential Calculus</string>
    <string name="intergral">   3.  Integral Calculus</string>
    <string name="twodim">  4.  Two Dimensions</string>
    <string name="threedim">    5.  Three Dimensions</string>
    <string name="vector">  6.  Vectors</string>
    <string name="Trigonom">    7.  Trigonometry</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string-array name="array_name">
        <item>Array Item One</item>
        <item>Array Item Two</item>
        <item>Array Item Three</item>
    </string-array>
    <string name="disclaimer">   This content is not generated  or developed by us all the content is already available on internet
         we have only just modify the data and  made more perfect for students to save their time and money. It might have some errors.
     If you get any kind of errors or bugs then you are requested to report us immediately.</string>
    <string name="superscript"><html><i>a</i><sup>2</sup>+<i>y</i><sup>2</sup></html></string>
    <string name="subscript"></string>
    <string name="intt"><html>f(x)=<i>&#8747; <sub>2</sub> <sup>9</sup> </i>   <sub>1+x</sub></html></string>
    <string name="action_settings">Settings</string>
    <string name="last_refresh">Refresh</string>
    <string name="last_share">Share data</string>
    <string name="last_report">Report</string>
    <string name="rate_us">Rate Us</string>
    <string name="title_activity_algebra">algebra</string>
    <string name="title_activity_three__d">three_D</string>
    <string name="title_activity_course">Course</string>
    <string name="item_title">Palais Garnier</string>
    <string name="item_desc1">The Palais Garnier which
    </string>
    <string name="item_desc">The Palais Garnier which locates in Paris was built from 1861 for
        the Paris Opera.
    </string>
    <string name="detail_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.
    </string>
    <string name="detail_location">"8 Rue Scribe, 75009 Paris, France"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_matrices">Matrices</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_last_view">Last_view</string>
    <string name="title_activity_disclaimer">Disclaimer</string>
    <string name="title_activity_short_note">Short_note</string>
    <string name="title_activity_question_bank">Question_bank</string>
    <string name="pdf_show_local_progress_title">Local Progress</string>
    <string name="pdf_show_local_progress_content">Local content</string>
    <string name="pdf_show_online_dialog_title">Online title</string>
    <string name="pdf_show_online_dialog_question">Wait...</string>
    <string name="pdf_show_online_dialog_button_no">No</string>
    <string name="pdf_show_online_dialog_button_yes">Yes</string>
    <string name="title_activity_pdf_viewer">PdfViewerActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_downloaded_list">DownloadedList</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_pdf_fragment">PdfFragment</string>
    <string name="title_activity_concepts">Concepts</string>
    <string name="tagsVal"> IIT jee 2015 , Multiple Choice</string>
    <string name="tagsName">Tags : </string>
    <string name="comment">Comment</string>
    <string name="editorial">Solution</string>
    <string name="submission">Best Submission</string>
    <string name="likes">8</string>
    <string name="post">Post</string>
    <string name="percentsign">%</string>
    <string name="attach">Attached</string>
    <string name="solve">Solve :</string>
    <string name="time">Time :</string>
    <string name="h">h</string>
    <string name="like">Like</string>
    <string name="more">More</string>
    <string name="reply">Reply</string>
    <string name="report">Report</string>
    <string name="hide">Hide</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="upvote">Up vote</string>
    <string name="downvote">Down vote</string>
    <string name="thought">Write your thoughts here&#8230;</string>
    <string name="select">Select a Image from gallery or camera</string>
    <string name="picncrop">Pick Image And Crop</string>
    <string name="croped">Cropped Image</string>
    <string name="done">Done</string>
    <string name="retake">Retake</string>
    <string name="back">Back</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="capture">Crop</string>
    <string name="full">Full</string>
    <string name="leftrotate">Left Rotate</string>
    <string name="rightrotate">Right Rotate</string>
    <string name="example">Example</string>
    <string name="doubt">Doubt Ask/Solve</string>
    <string name="suggestion">Suggestion</string>
    <string name="concept">Concept</string>
    <string name="manditory">All Fields are Mandatory</string>
    <string name="tags">Enter Tags</string>
    <string name="selectTags">eg. IIT jee-2019,Easy/Medium/Hard ,&#8230; </string>
    <string name="describeEntry">eg. (if no text then enter a dot(.) only)</string>
    <string name="describeEntrynum">eg. (1,2,3&#8230; only)</string>
    <string name="topicn">Topic number</string>
    <string name="conceptText">Concept title</string>
    <string name="pdfUrl">Enter pdf Url</string>
    <string name="finish">Finish</string>
    <string name="cancel">Cancel</string>
    <string name="instrucitonfinish">Are you Sure..</string>
    <string name="startondate">Start soon</string>
    <string name="startnow">Start Now</string>
    <string name="instruction">Read Instructions</string>
    <string name="instructionLive">Exam Instructions</string>
    <string name="noofhours">Number of hours</string>
    <string name="close">Close</string>
</resources>