<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PostExample">

    <ScrollView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginHorizontal="10dp">
        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/manditory"
                android:text="@string/manditory"
                android:layout_marginTop="@dimen/right_margin_card"
                android:layout_centerHorizontal="true"
                android:textSize="25dp"
                android:textColor="@color/light_red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tagsTextView"
                android:text="@string/conceptText"
                android:layout_marginTop="@dimen/md_keylines"
                android:textColor="@color/hadlerColorBorder"
                android:layout_below="@id/manditory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RelativeLayout
                android:id="@+id/rl1"
                android:layout_below="@+id/tagsTextView"
                android:layout_marginTop="@dimen/small_margin"
                android:background="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.apradanas.simplelinkabletext.LinkableEditText
                    android:id="@+id/tagsvalLinkableEdit"
                    android:hint="@string/selectTags"
                    android:textColor="@color/black"
                    android:singleLine="false"
                    android:imeOptions="actionSend"
                    android:clickable="true"
                    android:focusable="true"
                    android:scrollbars="vertical"
                    android:lines="5"
                    android:minLines="1"
                    android:maxLines="5"
                    android:inputType="textMultiLine|textCapSentences"
                    android:cursorVisible="true"
                    android:textSize="@dimen/medium_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>

            <TextView
                android:id="@+id/questionTextView"
                android:layout_below="@+id/rl1"
                android:text="@string/pdfUrl"
                android:layout_marginTop="@dimen/right_margin_card"
                android:textColor="@color/hadlerColorBorder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RelativeLayout
                android:id="@+id/rl2"
                android:layout_below="@+id/questionTextView"
                android:layout_marginTop="@dimen/small_margin"
                android:background="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.apradanas.simplelinkabletext.LinkableEditText
                    android:id="@+id/questionvalLinkableEdit"
                    android:hint="@string/describeEntry"
                    android:textColor="@color/black"
                    android:singleLine="false"
                    android:imeOptions="actionSend"
                    android:clickable="true"
                    android:focusable="true"
                    android:scrollbars="vertical"
                    android:lines="5"
                    android:minLines="1"
                    android:maxLines="5"
                    android:inputType="textMultiLine|textCapSentences"
                    android:cursorVisible="true"
                    android:textSize="@dimen/medium_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>

            <TextView
                android:id="@+id/topicnum"
                android:layout_below="@+id/rl2"
                android:text="@string/topicn"
                android:layout_marginTop="@dimen/right_margin_card"
                android:textColor="@color/hadlerColorBorder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RelativeLayout
                android:id="@+id/rl3"
                android:layout_below="@+id/topicnum"
                android:layout_marginTop="@dimen/small_margin"
                android:background="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.apradanas.simplelinkabletext.LinkableEditText
                    android:id="@+id/topicnumLinkableEdit"
                    android:hint="@string/describeEntrynum"
                    android:textColor="@color/black"
                    android:singleLine="false"
                    android:imeOptions="actionSend"
                    android:clickable="true"
                    android:focusable="true"
                    android:scrollbars="vertical"
                    android:lines="5"
                    android:minLines="1"
                    android:maxLines="5"
                    android:inputType="number"
                    android:cursorVisible="true"
                    android:textSize="@dimen/medium_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>
            <TextView
                android:id="@+id/time"
                android:layout_below="@+id/rl3"
                android:text="@string/noofhours"
                android:layout_marginTop="@dimen/right_margin_card"
                android:textColor="@color/hadlerColorBorder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RelativeLayout
                android:id="@+id/rl5"
                android:layout_below="@+id/time"
                android:layout_marginTop="@dimen/small_margin"
                android:background="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.apradanas.simplelinkabletext.LinkableEditText
                    android:id="@+id/timeLinkableEdit"
                    android:hint="@string/noofhours"
                    android:textColor="@color/black"
                    android:singleLine="false"
                    android:imeOptions="actionSend"
                    android:clickable="true"
                    android:focusable="true"
                    android:scrollbars="vertical"
                    android:lines="5"
                    android:minLines="1"
                    android:maxLines="5"
                    android:inputType="number"
                    android:cursorVisible="true"
                    android:textSize="@dimen/medium_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>

            <Button
                android:id="@+id/postButton_post_example"
                android:layout_width="@dimen/right_margin"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/option_height32"
                android:layout_marginBottom="@dimen/option_height32"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:backgroundTint="@color/line_background"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/rl5"
                android:textColor="@color/blue"
                android:textAllCaps="false"
                style="?android:attr/borderlessButtonStyle"
                android:text="@string/post"/>



        </RelativeLayout>

    </ScrollView>
</RelativeLayout>