<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/feedback_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/whitegray"
    android:orientation="vertical">
    <TextView
        android:id="@+id/manditory"
        android:text="@string/instructionLive"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_centerHorizontal="true"
        android:textSize="25dp"
        android:textColor="@color/light_red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <RelativeLayout
        android:id="@+id/scrollView"
        android:layout_below="@id/manditory"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="wrap_content">

        <androidx.core.widget.NestedScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <com.apradanas.simplelinkabletext.LinkableTextView
                android:id="@+id/textLinkableTextViewInstruciton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginLeft="@dimen/right_margin_card"
                tools:text="@string/item_desc"
                android:ellipsize="end"
                android:singleLine="false"
                android:textIsSelectable="true"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_text_view" />

        </androidx.core.widget.NestedScrollView>

        <androidx.cardview.widget.CardView
            android:id="@+id/editTextInstruciton"
            android:layout_marginLeft="@dimen/small_margin"
            android:layout_marginRight="@dimen/small_margin"
            android:elevation="50dp"
            app:cardCornerRadius="@dimen/small_margin"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="150dp">

            <com.apradanas.simplelinkabletext.LinkableEditText
                android:id="@+id/editTextLinkableEditInstruciton"
                android:hint="@string/thought"
                android:textColor="@color/black"
                android:layout_margin="@dimen/small_margin"
                android:singleLine="false"
                android:imeOptions="actionSend"
                android:clickable="true"
                android:focusable="true"
                android:scrollbars="vertical"
                android:gravity="top"
                android:minLines="1"
                android:background="@null"
                android:inputType="textMultiLine|textCapSentences"
                android:cursorVisible="true"
                android:textSize="@dimen/medium_text_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>



        </androidx.cardview.widget.CardView>


    </RelativeLayout>



    <Button
        android:id="@+id/postButton"
        android:layout_width="@dimen/right_margin"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginBottom="@dimen/small_margin"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:backgroundTint="@color/line_background"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/scrollView"
        android:textColor="@color/red"
        android:textAllCaps="false"
        android:textSize="@dimen/large_text_view"
        style="?android:attr/borderlessButtonStyle"
        android:text="@string/close"/>


</RelativeLayout>
