<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/popup_relative"
    android:layout_width="@dimen/pop_width"
    android:elevation="200dp"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <ImageView
        android:id="@+id/up"
        android:src="@drawable/ic_action_up_direction"
        android:tint="@color/gray"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="-15dp"
        android:layout_marginRight="@dimen/right_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/popup"
        android:layout_below="@id/up"
        android:layout_height="@dimen/cards_button_width"
        android:background="@color/whitegray"
        android:weightSum="4"
        android:orientation="horizontal" >
        <RelativeLayout
            android:id="@+id/replyLayout"
            android:layout_marginLeft="@dimen/md_keylines"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/md_keylines"
            android:layout_height="@dimen/cards_button_height">
            <TextView
                android:id="@+id/reply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reply"
                android:layout_centerInParent="true"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/hideLayout"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/md_keylines"
            android:layout_height="@dimen/cards_button_height">
            <TextView
                android:id="@+id/hide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hide"
                android:layout_centerInParent="true"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/reportLayout"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/small_margin"
            android:layout_height="@dimen/cards_button_height">
            <TextView
                android:id="@+id/report"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report"
                android:layout_centerInParent="true"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/editLayout"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/small_margin"
            android:layout_height="@dimen/cards_button_height">
            <TextView
                android:id="@+id/edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                android:layout_centerInParent="true"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>